<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:src="@drawable/login_header"
        android:scaleType="fitEnd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.5"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/login_header">

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:background="@drawable/login_edittext_border"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:background="@drawable/login_edittext_border"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:text="@string/login_button_label"
        android:background="@drawable/login_button_border"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_text"
        android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</LinearLayout>